Mobile alignment fix in about us

--- a/src/pages/aboutus/section4/FranchiseEnquirySection.module.css
+++ b/src/pages/aboutus/section4/FranchiseEnquirySection.module.css
@@ -112,6 +112,9 @@
     width: 70%;
     margin-top: 10px;
   }
+  .container{
+    width: 100%;
+  }
   .nameInput{
     width: 40%;
   }
