--- a/src/pages/aboutus/section5/PartnershipSection.module.css
+++ b/src/pages/aboutus/section5/PartnershipSection.module.css
@@ -48,9 +48,16 @@ li:before{
 @media only screen and (max-width: 650px) {
     .contentSection{
         flex-direction: column-reverse;
+        padding: 0;
     }
     .partnershipImg{
         width: 100%;
+    }
+    .benefitsText{
+        padding-left: 15px;
+    }
+    .partnershipImg{
+        margin-left: 0px;
     }
     .clientsContainer{
         flex-direction: column;
